// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Calls the canonical placeholder when platform is canonical and showPlaceholder is true 1`] = `
.c7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c9 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c3 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c3:hover,
.c3:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c6 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c8 {
  display: block;
  margin-top: 0.5rem;
}

.c2 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c4 {
  position: absolute;
  bottom: 0;
}

.c1:hover .c4,
.c1:focus .c4 {
  background-color: #B80000;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1 c2"
        >
          <button
            class="c3 c4"
          >
            <span
              class="c5"
            >
              Play video, "Five things ants can teach us about management", 3,11
            </span>
            <div
              aria-hidden="true"
              class="c6"
            >
              <svg
                class="c7"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
            </div>
            <time
              aria-hidden="true"
              class="c8"
              datetime="PT3M11S"
            >
              3:11
            </time>
          </button>
          <img
            alt=""
            class="c9"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
          />
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Does not Call the canonical placeholder when platform is canonical but showPlaceholder is false 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    .c1 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
      <div
        class="c0"
      >
        <iframe
          allow="autoplay; fullscreen"
          allowfullscreen=""
          class="c1"
          src="https://www.test.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"
          title="Media player"
        />
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the AMP player when platform is AMP 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          src="https://www.test.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
            width="9"
          />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the AMP player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c1 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c1 > p:last-child {
  padding-bottom: 0;
}

.c1 i {
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c1 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c1 {
    padding: 0.5rem 0 0;
  }
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          src="https://www.test.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
            width="9"
          />
        </amp-iframe>
      </div>
      <figcaption
        class="c1"
      >
        <span
          class="c2"
        >
          Video caption, 
        </span>
        <p>
          Media Player With Caption
        </p>
      </figcaption>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the canonical player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    .c7 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c9 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c5 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c3 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c3:hover,
.c3:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c6 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c8 {
  display: block;
  margin-top: 0.5rem;
}

.c2 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c4 {
  position: absolute;
  bottom: 0;
}

.c1:hover .c4,
.c1:focus .c4 {
  background-color: #B80000;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c10 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c10 > p:last-child {
  padding-bottom: 0;
}

.c10 i {
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c10 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c10 {
    padding: 0.5rem 0 0;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1 c2"
        >
          <button
            class="c3 c4"
          >
            <span
              class="c5"
            >
              Play video, "Five things ants can teach us about management", 3,11
            </span>
            <div
              aria-hidden="true"
              class="c6"
            >
              <svg
                class="c7"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
            </div>
            <time
              aria-hidden="true"
              class="c8"
              datetime="PT3M11S"
            >
              3:11
            </time>
          </button>
          <img
            alt=""
            class="c9"
            src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
          />
        </div>
      </div>
      <figcaption
        class="c10"
      >
        <span
          class="c5"
        >
          Video caption, 
        </span>
        <p>
          Media Player With Caption
        </p>
      </figcaption>
    </div>
  </body>
</html>
`;
